# hackathon_2019

./: Makefile
fastyaml/: pom.xml
fastyaml/src/main/java/: Main.java  serialize_YAML.h
fastyaml/src/main/java/serialize/: HiveToJDBC.java  ObjectName.java  Schema.java  SchemaName.java  YAML.java
fastyaml/src/main/java/serialize/TableCols/: Column.java  TableColsTable.java
fastyaml/src/main/java/serialize/TablesTable/: TableExtData.java  TablesTableTable.java
mde/: Cargo.toml
mde/src/: lib.rs
mde/src/convert/: mod.rs
