[package]
name = "mde"
version = "0.1.0"
authors = ["chris.henderson <chris.henderson@alation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[lib]
crate_type = ["cdylib"]